--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -27,10 +27,10 @@
   /*========== Font and typography ==========*/
   --body-font: "Poppins", sans-serif;
   /* .5rem = 8px, 1rem = 16px, 1.5rem = 24px ... */
-  --big-font-size: 2rem;
-  --h1-font-size: 1.5rem;
-  --h2-font-size: 1.25rem;
-  --h3-font-size: 1.125rem;
+  --big-font-size: 1.5rem;
+  --h1-font-size: 1rem;
+  --h2-font-size: .75rem;
+  --h3-font-size: .625rem;
   --normal-font-size: 0.938rem;
   --small-font-size: 0.813rem;
   --smaller-font-size: 0.75rem;
